--- a/pricing/index.html
+++ b/pricing/index.html
@@ -4,15 +4,17 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Pricing</title>
-  <link rel="stylesheet" href="./styles.css" />
+
+  <!-- ✅ pricing/ folder se assets/ ka path -->
+  <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 <body>
 
   <header class="site-header">
     <div class="container">
       <div class="navbar">
-        <a class="brand" href="./index.html">
-          <img class="brand-logo" src="./assets/arh-logo.png" alt="ARH Logo" />
+        <a class="brand" href="../index.html">
+          <img class="brand-logo" src="../assets/arh-logo.png" alt="ARH Logo" />
           <div class="brand-title">
             <strong>Anjani Real Heights</strong>
             <span>Trusted Property Consultants</span>
@@ -20,12 +22,12 @@
         </a>
 
         <nav class="menu">
-          <a href="./index.html">Home</a>
-          <a href="./pricing.html">Pricing</a>
-          <a href="./contact.html">Contact</a>
+          <a href="../index.html">Home</a>
+          <a href="./index.html">Pricing</a>
+          <a href="../contact.html">Contact</a>
         </nav>
 
-        <a class="btn btn-primary" href="./contact.html">Get Quote</a>
+        <a class="btn btn-primary" href="../contact.html">Get Quote</a>
       </div>
     </div>
   </header>
@@ -121,10 +123,11 @@
 
   <footer class="footer">
     <div class="container">
-      © <span id="year"></span> Anjani Real Heights • <a href="./contact.html">Contact</a>
+      © <span id="year"></span> Anjani Real Heights • <a href="../contact.html">Contact</a>
     </div>
   </footer>
 
-  <script src="./script.js"></script>
+  <!-- ✅ pricing/ folder se assets/app.js -->
+  <script src="../assets/app.js"></script>
 </body>
 </html>
