--- a/pricing/index.html
+++ b/pricing/index.html
@@ -51,73 +51,79 @@
     <section class="grid-3" id="pricingGrid">
 
       <!-- BASIC -->
-      <article class="card" data-plan="basic">
-        <div class="card-body">
-          <h2>Basic</h2>
-          <div class="price">₹199</div>
-          <p class="muted">For quick consultation & guidance.</p>
+      <!-- BASIC -->
+<article class="card" data-plan="basic">
+  <div class="card-body">
+    <h2>Basic</h2>
+    <div class="price">₹199</div>
+    <p class="muted">Best for quick tenants.</p>
 
-          <div class="hr"></div>
+    <div class="hr"></div>
 
-          <p class="small">Includes:</p>
-          <div class="pills">
-            <span class="pill">Call Support</span>
-            <span class="pill">Market Guidance</span>
-            <span class="pill">Deal Check</span>
-          </div>
+    <p class="small">Includes:</p>
+    <div class="pills">
+      <span class="pill">1 Property Listing</span>
+      <span class="pill">Visible 15 Days</span>
+      <span class="pill">Auto-hide After Expiry</span>
+    </div>
 
-          <div class="hr"></div>
+    <div class="hr"></div>
 
-          <button class="btn btn-primary select-btn" type="button">Select Plan</button>
-        </div>
-      </article>
+    <button class="btn btn-primary select-btn" type="button">Select Plan</button>
+  </div>
+</article>
 
-      <!-- PREMIUM (MOST POPULAR) -->
-      <article class="card featured selected" data-plan="premium">
-        <span class="tag">Most Popular</span>
-        <div class="card-body">
-          <h2>Premium</h2>
-          <div class="price">₹349</div>
-          <p class="muted">Best value for buyers & sellers.</p>
+<!-- PREMIUM (MOST POPULAR) -->
+<article class="card featured selected" data-plan="premium">
+  <span class="tag">Most Popular</span>
+  <div class="card-body">
+    <h2>Premium</h2>
+    <div class="price">₹349</div>
+    <p class="muted">Best value plan.</p>
 
-          <div class="hr"></div>
+    <div class="hr"></div>
 
-          <p class="small">Includes:</p>
-          <div class="pills">
-            <span class="pill">Site Visit</span>
-            <span class="pill">Negotiation Help</span>
-            <span class="pill">Documentation</span>
-            <span class="pill">Priority Support</span>
-          </div>
+    <p class="small">Includes:</p>
+    <div class="pills">
+      <span class="pill">1 Property Listing</span>
+      <span class="pill">Visible 30 Days</span>
+      <span class="pill">Higher Visibility</span>
+      <span class="pill">Faster Responses</span>
+    </div>
 
-          <div class="hr"></div>
+    <div class="hr"></div>
 
-          <button class="btn btn-primary select-btn" type="button">Selected</button>
-        </div>
-      </article>
+    <button class="btn btn-primary select-btn" type="button">Selected</button>
 
-      <!-- PRO -->
-      <article class="card" data-plan="pro">
-        <div class="card-body">
-          <h2>Pro</h2>
-          <div class="price">₹599</div>
-          <p class="muted">For serious investors & complex deals.</p>
+    <div class="hr"></div>
+    <p class="small muted">Fees are for listing visibility only. No deal guarantee.</p>
+  </div>
+</article>
 
-          <div class="hr"></div>
+<!-- PRO / EXTENDED -->
+<article class="card" data-plan="pro">
+  <div class="card-body">
+    <h2>Pro</h2>
+    <div class="price">₹599</div>
+    <p class="muted">Ideal for patient owners.</p>
 
-          <p class="small">Includes:</p>
-          <div class="pills">
-            <span class="pill">Multiple Visits</span>
-            <span class="pill">Legal Coordination</span>
-            <span class="pill">End-to-End Support</span>
-          </div>
+    <div class="hr"></div>
 
-          <div class="hr"></div>
+    <p class="small">Includes:</p>
+    <div class="pills">
+      <span class="pill">1 Property Listing</span>
+      <span class="pill">Visible 60 Days</span>
+      <span class="pill">Longest Exposure</span>
+    </div>
 
-          <button class="btn btn-primary select-btn" type="button">Select Plan</button>
-        </div>
-      </article>
+    <div class="hr"></div>
 
+    <button class="btn btn-primary select-btn" type="button">Select Plan</button>
+
+    <div class="hr"></div>
+    <p class="small muted">Fees are for listing visibility only. No deal guarantee.</p>
+  </div>
+</article>
     </section>
   </main>
 
