--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>ARH Rentals — Hisar</title>
   <link rel="stylesheet" href="/assets/styles.css"/>
+  <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdYFTssAAAAAGqObwYCNTt7WFoLWkdJhomR6geu"></script>
 </head>
 <body>
 
