--- a/pricing/index.html
+++ b/pricing/index.html
@@ -51,7 +51,6 @@
     <section class="grid-3" id="pricingGrid">
 
       <!-- BASIC -->
-      <!-- BASIC -->
 <article class="card" data-plan="basic">
   <div class="card-body">
     <h2>Basic</h2>
@@ -66,9 +65,12 @@
       <span class="pill">Visible 15 Days</span>
       <span class="pill">Auto-hide After Expiry</span>
     </div>
-
+     <p class="small muted" style="margin-top:10px">
+  🔒 This plan is valid for <b>one property only</b>.<br/>
+  Posting another property (even from the same phone number) requires a new plan.
+</p>
     <div class="hr"></div>
-
+    
     <button class="btn btn-primary select-btn" type="button">Select Plan</button>
   </div>
 </article>
@@ -90,7 +92,10 @@
       <span class="pill">Higher Visibility</span>
       <span class="pill">Faster Responses</span>
     </div>
-
+<p class="small muted" style="margin-top:10px">
+  🔒 This plan is valid for <b>one property only</b>.<br/>
+  Posting another property (even from the same phone number) requires a new plan.
+</p>
     <div class="hr"></div>
 
     <button class="btn btn-primary select-btn" type="button">Selected</button>
@@ -115,6 +120,10 @@
       <span class="pill">Visible 60 Days</span>
       <span class="pill">Longest Exposure</span>
     </div>
+    <p class="small muted" style="margin-top:10px">
+  🔒 This plan is valid for <b>one property only</b>.<br/>
+  Posting another property (even from the same phone number) requires a new plan.
+</p>
 
     <div class="hr"></div>
 
