--- a/pricing/index.html
+++ b/pricing/index.html
@@ -76,7 +76,7 @@
 </article>
 
 <!-- PREMIUM (MOST POPULAR) -->
-<article class="card featured selected" data-plan="premium">
+<article class="card featured" data-plan="premium">
   <span class="tag">Most Popular</span>
   <div class="card-body">
     <h2>Premium</h2>
