--- a/pricing/index.html
+++ b/pricing/index.html
@@ -98,7 +98,7 @@
 </p>
     <div class="hr"></div>
 
-    <button class="btn btn-primary select-btn" type="button">Selected</button>
+    <button class="btn btn-primary select-btn" type="button">Select Plan</button>
 
     <div class="hr"></div>
     <p class="small muted">Fees are for listing visibility only. No deal guarantee.</p>
