--- a/pricing/index.html
+++ b/pricing/index.html
@@ -51,88 +51,95 @@
     <section class="grid-3" id="pricingGrid">
 
       <!-- BASIC -->
-<article class="card" data-plan="basic">
-  <div class="card-body">
-    <h2>Basic</h2>
-    <div class="price">₹199</div>
-    <p class="muted">Best for quick tenants.</p>
+      <article class="card" data-plan="basic">
+        <div class="card-body">
+          <h2>Basic</h2>
+          <div class="price">₹199</div>
+          <p class="muted">Best for quick tenants.</p>
 
-    <div class="hr"></div>
+          <div class="hr"></div>
 
-    <p class="small">Includes:</p>
-    <div class="pills">
-      <span class="pill">1 Property Listing</span>
-      <span class="pill">Visible 15 Days</span>
-      <span class="pill">Auto-hide After Expiry</span>
-    </div>
-     <p class="small muted" style="margin-top:10px">
-  🔒 This plan is valid for <b>one property only</b>.<br/>
-  Posting another property (even from the same phone number) requires a new plan.
-</p>
-    <div class="hr"></div>
-    
-    <button class="btn btn-primary select-btn" type="button">Select Plan</button>
-  </div>
-</article>
+          <p class="small">Includes:</p>
+          <div class="pills">
+            <span class="pill">1 Property Listing</span>
+            <span class="pill">Visible 15 Days</span>
+            <span class="pill">Auto-hide After Expiry</span>
+          </div>
 
-<!-- PREMIUM (MOST POPULAR) -->
-<article class="card featured selected" data-plan="premium">
-  <span class="tag">Most Popular</span>
-  <div class="card-body">
-    <h2>Premium</h2>
-    <div class="price">₹349</div>
-    <p class="muted">Best value plan.</p>
+          <p class="small muted" style="margin-top:10px">
+            🔒 This plan is valid for <b>one property only</b>.<br/>
+            Posting another property (even from the same phone number) requires a new plan.
+          </p>
 
-    <div class="hr"></div>
+          <div class="hr"></div>
 
-    <p class="small">Includes:</p>
-    <div class="pills">
-      <span class="pill">1 Property Listing</span>
-      <span class="pill">Visible 30 Days</span>
-      <span class="pill">Higher Visibility</span>
-      <span class="pill">Faster Responses</span>
-    </div>
-<p class="small muted" style="margin-top:10px">
-  🔒 This plan is valid for <b>one property only</b>.<br/>
-  Posting another property (even from the same phone number) requires a new plan.
-</p>
-    <div class="hr"></div>
+          <button class="btn btn-primary select-btn" type="button">Select Plan</button>
+        </div>
+      </article>
 
-    <button class="btn btn-primary select-btn" type="button">Select Plan</button>
+      <!-- PREMIUM (MOST POPULAR) -->
+      <!-- ✅ NOTE: yahan "selected" class hardcode nahi hai. JS default premium select karega -->
+      <article class="card featured" data-plan="premium">
+        <span class="tag">Most Popular</span>
+        <div class="card-body">
+          <h2>Premium</h2>
+          <div class="price">₹349</div>
+          <p class="muted">Best value plan.</p>
 
-    <div class="hr"></div>
-    <p class="small muted">Fees are for listing visibility only. No deal guarantee.</p>
-  </div>
-</article>
+          <div class="hr"></div>
 
-<!-- PRO / EXTENDED -->
-<article class="card" data-plan="pro">
-  <div class="card-body">
-    <h2>Pro</h2>
-    <div class="price">₹599</div>
-    <p class="muted">Ideal for patient owners.</p>
+          <p class="small">Includes:</p>
+          <div class="pills">
+            <span class="pill">1 Property Listing</span>
+            <span class="pill">Visible 30 Days</span>
+            <span class="pill">Higher Visibility</span>
+            <span class="pill">Faster Responses</span>
+          </div>
 
-    <div class="hr"></div>
+          <p class="small muted" style="margin-top:10px">
+            🔒 This plan is valid for <b>one property only</b>.<br/>
+            Posting another property (even from the same phone number) requires a new plan.
+          </p>
 
-    <p class="small">Includes:</p>
-    <div class="pills">
-      <span class="pill">1 Property Listing</span>
-      <span class="pill">Visible 60 Days</span>
-      <span class="pill">Longest Exposure</span>
-    </div>
-    <p class="small muted" style="margin-top:10px">
-  🔒 This plan is valid for <b>one property only</b>.<br/>
-  Posting another property (even from the same phone number) requires a new plan.
-</p>
+          <div class="hr"></div>
 
-    <div class="hr"></div>
+          <button class="btn btn-primary select-btn" type="button">Select Plan</button>
 
-    <button class="btn btn-primary select-btn" type="button">Select Plan</button>
+          <div class="hr"></div>
+          <p class="small muted">Fees are for listing visibility only. No deal guarantee.</p>
+        </div>
+      </article>
 
-    <div class="hr"></div>
-    <p class="small muted">Fees are for listing visibility only. No deal guarantee.</p>
-  </div>
-</article>
+      <!-- PRO / EXTENDED -->
+      <article class="card" data-plan="pro">
+        <div class="card-body">
+          <h2>Pro</h2>
+          <div class="price">₹599</div>
+          <p class="muted">Ideal for patient owners.</p>
+
+          <div class="hr"></div>
+
+          <p class="small">Includes:</p>
+          <div class="pills">
+            <span class="pill">1 Property Listing</span>
+            <span class="pill">Visible 60 Days</span>
+            <span class="pill">Longest Exposure</span>
+          </div>
+
+          <p class="small muted" style="margin-top:10px">
+            🔒 This plan is valid for <b>one property only</b>.<br/>
+            Posting another property (even from the same phone number) requires a new plan.
+          </p>
+
+          <div class="hr"></div>
+
+          <button class="btn btn-primary select-btn" type="button">Select Plan</button>
+
+          <div class="hr"></div>
+          <p class="small muted">Fees are for listing visibility only. No deal guarantee.</p>
+        </div>
+      </article>
+
     </section>
   </main>
 
@@ -142,97 +149,49 @@
     </div>
   </footer>
 
-  <script src="../assets/app.js"></script>
-<script>
-/* =========================================================
-   PRICING PAGE: Plan selection (Card highlight + button text)
-========================================================= */
-document.addEventListener("DOMContentLoaded", () => {
-  const grid = document.getElementById("pricingGrid");
-  if (!grid) return;
-
-  const cards = Array.from(grid.querySelectorAll(".card[data-plan]"));
-
-  function setSelectedCard(card) {
-    cards.forEach(c => {
-      c.classList.remove("selected");
-      const btn = c.querySelector(".select-btn");
-      if (btn) btn.textContent = "Select Plan";
-    });
-
-    card.classList.add("selected");
-    const btn = card.querySelector(".select-btn");
-    if (btn) btn.textContent = "Selected";
-  }
-
-  cards.forEach(card => {
-    card.style.cursor = "pointer";
-
-    card.addEventListener("click", (e) => {
-      if (e.target && e.target.closest("a")) return;
-      setSelectedCard(card);
-    });
-
-    const btn = card.querySelector(".select-btn");
-    if (btn) {
-      btn.addEventListener("click", (e) => {
-        e.preventDefault();
-        e.stopPropagation();
-        setSelectedCard(card);
-      });
-    }
-  });
-
-  const already = grid.querySelector(".card.selected") || cards[0];
-  if (already) setSelectedCard(already);
-});
-</script>
+  <!-- ✅ app.js sirf 1 baar -->
   <script src="../assets/app.js"></script>
 
+  <!-- ✅ Pricing selection script (sirf 1 baar) -->
   <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const grid = document.getElementById("pricingGrid");
-    if (!grid) return;
+    document.addEventListener("DOMContentLoaded", () => {
+      const grid = document.getElementById("pricingGrid");
+      if (!grid) return;
 
-    const cards = Array.from(grid.querySelectorAll(".card[data-plan]"));
+      const cards = [...grid.querySelectorAll(".card[data-plan]")];
 
-    function setSelectedCard(card) {
-      cards.forEach(c => {
-        c.classList.remove("selected");
-        const btn = c.querySelector(".select-btn");
-        if (btn) btn.textContent = "Select Plan";
-      });
-
-      card.classList.add("selected");
-      const btn = card.querySelector(".select-btn");
-      if (btn) btn.textContent = "Selected";
-    }
-
-    cards.forEach(card => {
-      card.style.cursor = "pointer";
-
-      card.addEventListener("click", (e) => {
-        if (e.target && e.target.closest("a")) return;
-        setSelectedCard(card);
-      });
-
-      const btn = card.querySelector(".select-btn");
-      if (btn) {
-        btn.addEventListener("click", (e) => {
-          e.preventDefault();
-          e.stopPropagation();
-          setSelectedCard(card);
+      function setSelected(card) {
+        cards.forEach(c => {
+          c.classList.remove("selected");
+          const b = c.querySelector(".select-btn");
+          if (b) b.textContent = "Select Plan";
         });
-      }
-    });
 
-    // default selected
-    const defaultCard =
-      grid.querySelector('.card[data-plan="premium"]') || cards[0];
-    if (defaultCard) setSelectedCard(defaultCard);
-  });
+        card.classList.add("selected");
+        const btn = card.querySelector(".select-btn");
+        if (btn) btn.textContent = "Selected";
+      }
+
+      cards.forEach(card => {
+        // card click
+        card.addEventListener("click", () => setSelected(card));
+
+        // button click
+        const btn = card.querySelector(".select-btn");
+        if (btn) {
+          btn.addEventListener("click", (e) => {
+            e.preventDefault();
+            e.stopPropagation();
+            setSelected(card);
+          });
+        }
+      });
+
+      // default selected: premium (else first)
+      const premium = grid.querySelector('.card[data-plan="premium"]') || cards[0];
+      if (premium) setSelected(premium);
+    });
   </script>
-</body>
-</html>
+
 </body>
 </html>
