--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <header class="site-header">
   <div class="container navbar">
+
     <a class="brand" href="/">
       <img class="brand-logo" src="/assets/arh-logo.png" alt="ARH Rentals Logo">
       <div class="brand-title">
@@ -19,14 +20,29 @@
       </div>
     </a>
 
-    <nav class="menu">
+    <div class="header-actions">
+      <a class="btn btn-primary header-cta" href="/post">Post Property</a>
+
+      <button class="nav-toggle"
+              type="button"
+              aria-label="Menu"
+              aria-controls="primary-navigation"
+              aria-expanded="false">
+        <span class="nav-toggle-icon" aria-hidden="true"></span>
+      </button>
+    </div>
+
+  </div>
+
+  <nav class="menu" id="primary-navigation" aria-label="Primary">
+    <div class="container nav-inner">
       <a href="/">Home</a>
       <a href="/listings">Listings</a>
       <a href="/pricing">Plans</a>
       <a href="/legal">Legal</a>
-      <a class="btn btn-primary" href="/post">Post Property</a>
-    </nav>
-  </div>
+      <a class="btn btn-primary menu-cta" href="/post">Post Property</a>
+    </div>
+  </nav>
 </header>
   
 <main class="container">
