--- a/pricing/index.html
+++ b/pricing/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Pricing</title>
-
+  <title>Post Rental Property in Hisar | ARH Rentals Pricing</title>
+<meta name="description" content="Choose the right plan to post your rental property in Hisar. 1 plan = 1 property listing. Transparent pricing by Anjani Real Heights." />
+<link rel="canonical" href="https://www.anjanirealheights.com/pricing/" />
   <link rel="stylesheet" href="../assets/styles.css" />
 </head>
 <body>
