--- a/pricing/index.html
+++ b/pricing/index.html
@@ -34,19 +34,27 @@
 
   <main class="container">
     <section class="hero">
-      <h1>Pricing Plans</h1>
-      <p class="muted">Choose a plan that fits your needs. Click any plan to select.</p>
+  <h1>Post Your Rental Property in Hisar</h1>
 
-      <div class="trust-strip">
-        <span>✅ Transparent Pricing</span>
-        <span>✅ Local Expertise</span>
-        <span>✅ Fast Deal Support</span>
-      </div>
+  <p class="sub">
+    List your rental property with <strong>ARH Rentals</strong> by
+    <strong>Anjani Real Heights</strong>. Clear pricing, no confusion,
+    and local reach across Hisar.
+  </p>
 
-      <div class="notice">
-        Tip: <b>Premium</b> is marked as <b>Most Popular</b>. Click any card to highlight as <b>Selected</b>.
-      </div>
-    </section>
+  <div class="trust-strip">
+    <span>✔ Since 1989</span>
+    <span>✔ Hisar Local Experts</span>
+    <span>✔ No Unlimited Listings</span>
+    <span>✔ One Plan = One Property</span>
+  </div>
+
+  <div class="notice">
+    <strong>Important:</strong> Each pricing plan allows you to post
+    <u>only one rental property</u>.
+    For multiple properties, purchase a separate plan for each listing.
+  </div>
+</section>
 
     <section class="grid-3" id="pricingGrid">
 
