--- a/index.html
+++ b/index.html
@@ -46,16 +46,35 @@
 </header>
   
 <main class="container">
-  <section class="hero">
-    <h1>Find Rental Properties in Hisar (LIVE)</h1>
-    <p>Flats • Houses • Shops • Clean UI • Trusted flow</p>
+  <section class="hero home-hero">
+  <div class="container">
+    <h1>Rental Properties in Hisar – Flats, Houses & Shops</h1>
+
+    <p class="sub">
+      Discover flats, houses and commercial shops for rent in Hisar.
+      ARH Rentals is a local property listing platform where owners
+      publish rental ads directly.  
+      Users are advised to independently verify all property details
+      before any transaction.
+    </p>
 
     <div class="hero-actions">
-      <input class="input" id="pincode" placeholder="Enter Pincode (e.g., 125001)" inputmode="numeric"/>
-      <button class="btn btn-primary" onclick="checkPincode()">Check</button>
-      <span class="badge" id="pin-result">Service areas: Phase 1 (Hisar)</span>
+      <a href="/listings/" class="btn btn-primary">
+        Browse Rental Listings
+      </a>
+      <a href="/pricing/" class="btn">
+        Post Property for Rent
+      </a>
     </div>
-  </section>
+
+    <div class="hero-trust">
+      <span>✔ Owner-posted Rental Ads</span>
+      <span>✔ Hisar-focused Property Listings</span>
+      <span>✔ No Brokerage or Deal Assurance</span>
+    </div>
+  </div>
+</section>
+
 
   <div class="grid">
     <section class="card">
