--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>ARH Rentals — Hisar</title>
+  <title>Rental Properties in Hisar | Flats, Houses & Shops – ARH Rentals</title>
   <link rel="stylesheet" href="/assets/styles.css"/>
   <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdYFTssAAAAAGqObwYCNTt7WFoLWkdJhomR6geu"></script>
 </head>
@@ -46,7 +46,7 @@
 </header>
   
 <main class="container">
-  <section class="hero home-hero">
+  <section class="hero home-hero" style="margin-bottom:30px">
       <h1>Rental Properties in Hisar – Flats, Houses & Shops</h1>
 
     <p class="sub">
@@ -71,7 +71,6 @@
       <span>✔ Hisar-focused Property Listings</span>
       <span>✔ No Brokerage or Deal Assurance</span>
     </div>
-  </div>
 </section>
 
 
@@ -131,6 +130,7 @@
       </div>
     </aside>
   </div>
+  </main>
 
   <footer class="footer">
   © 2025 ARH Rentals • <a href="/legal">Legal</a> • <a href="/pricing">Plans</a>
@@ -138,7 +138,7 @@
     Disclaimer: We do not guarantee or assure 100% lead generation. ARH Rentals is an information-access platform only and is not responsible for any deal/transaction.
   </div>
 </footer>
-</main>
+
 
 <script src="/assets/app.js"></script>
   <div id="recaptcha-container"></div>
