--- a/index.html
+++ b/index.html
@@ -72,6 +72,55 @@
       <span>✔ No Brokerage or Deal Assurance</span>
     </div>
 </section>
+  <section class="home-intro" style="margin-bottom:32px">
+  <h2>Find & Post Rental Properties in Hisar</h2>
+
+  <p class="muted" style="max-width:720px">
+    ARH Rentals is a Hisar-focused rental listing platform.
+    Property owners can post rental ads, and tenants can browse
+    available flats, houses and shops for rent.
+    This platform provides information access only —
+    users must independently verify all property details.
+  </p>
+
+  <div class="grid-3" style="margin-top:18px">
+    <div class="card">
+      <div class="card-body">
+        <h3>For Tenants</h3>
+        <p class="muted">
+          Browse rental listings in Hisar with basic details.
+          Contact information unlock will be available through
+          OTP and paid plans.
+        </p>
+        <a href="/listings" class="btn">Browse Rentals</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-body">
+        <h3>For Property Owners</h3>
+        <p class="muted">
+          Post your property for rent by selecting a listing plan.
+          Each plan allows publishing one rental advertisement
+          for a fixed visibility period.
+        </p>
+        <a href="/pricing" class="btn">View Listing Plans</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <div class="card-body">
+        <h3>How ARH Rentals Works</h3>
+        <p class="muted">
+          ARH Rentals is a listing platform only.
+          We do not act as a broker, mediator or deal facilitator.
+        </p>
+        <a href="/legal" class="btn">Read Legal Info</a>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 
   <div class="grid">
