--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
       <span>✔ No Brokerage or Deal Assurance</span>
     </div>
 </section>
+  
   <section class="home-intro" style="margin-bottom:32px">
   <h2>Find & Post Rental Properties in Hisar</h2>
 
@@ -126,9 +127,11 @@
   <div class="grid">
     <section class="card">
       <div class="card-body">
-        <h2>Available Rentals</h2>
-        <p class="muted">Demo listings. Next: connect database + OTP unlock + paid plans.</p>
-
+        <h2>Latest Rental Listings in Hisar</h2>
+<p class="muted">
+  Below are sample rental listings to show how properties will appear on ARH Rentals.
+  Live listings from property owners will start appearing as the platform opens for public use.
+</p>
         <div class="listings" style="margin-top:12px">
           <div class="listing" data-rent="12000">
             <div>
@@ -139,7 +142,7 @@
                 <span class="pill">Family preferred</span>
               </div>
             </div>
-            <button class="btn">Unlock Details</button>
+            <button class="btn">View Contact Details</button>
           </div>
 
           <div class="listing" data-rent="18000">
@@ -151,7 +154,7 @@
                 <span class="pill">High footfall</span>
               </div>
             </div>
-            <button class="btn">Unlock Details</button>
+            <button class="btn">View Contact Details</button>
           </div>
         </div>
 
