--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Rental Properties in Hisar | Flats, Houses & Shops – ARH Rentals</title>
+  <meta name="description" content="Browse flats, houses and shops for rent in Hisar. ARH Rentals is a local property listing platform where owners post rental ads directly. Users should verify details independently." />
+
+<!-- Open Graph / Social Sharing -->
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Rental Properties in Hisar | Flats, Houses & Shops – ARH Rentals" />
+<meta property="og:description" content="Find flats, houses and commercial shops for rent in Hisar. ARH Rentals is a rental listing platform where property owners publish ads directly." />
+<meta property="og:url" content="https://rent.anjanirealheights.com/" />
+<meta property="og:image" content="https://rent.anjanirealheights.com/assets/arh-logo.png" />
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Rental Properties in Hisar – ARH Rentals" />
+<meta name="twitter:description" content="Browse rental listings in Hisar. Owners post property ads directly on ARH Rentals. Verify details independently." />
+
   <link rel="stylesheet" href="/assets/styles.css"/>
   <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdYFTssAAAAAGqObwYCNTt7WFoLWkdJhomR6geu"></script>
 </head>
